Fix: Spacing between radio buttons

--- a/src/components/review/review-filters/review-filters.scss
+++ b/src/components/review/review-filters/review-filters.scss
@@ -25,10 +25,6 @@
     font-family: inherit !important;
     font-weight: 400 !important;
 }
-.css-j204z7-MuiFormControlLabel-root{
-    margin-bottom: -15px !important;
-    padding: 0px !important;
-}
 
 .review__radio-filters{
     width: 120px !important;
